src/test/deca/syntax/valid/longFloat.deca
{
    float string = 36543.3546384313546354;
}