src/test/deca/syntax/invalid/float_trop_petit.deca
{
	float f=1.0E-75;
}